[workspace]
members = [
    "common",
    # Crates
    "crates/global",
    "crates/declaration",
    "crates/timing",
    "crates/helper",
    "crates/snapshot",
    "crates/referral-token",
    "crates/staking-token",
    "crates/liquidity-token",
    # Transfer helper
    "transfer-helper/bin",
    "transfer-helper/session-code",
    "transfer-helper/src",
    "transfer-helper/tests",
]

[profile.release]
codegen-units = 1
lto = true