[workspace]
members = [
    # Commons
    "common/common",
    "common/tests-common",
    # Crates
    "crates/global",
    "crates/declaration",
    "crates/timing",
    "crates/helper",
    "crates/snapshot",
    "crates/referral-token",
    "crates/staking-token",
    "crates/liquidity-token",
    # Transfer helper
    "transfer-helper/bin",
    "transfer-helper/session-code",
    "transfer-helper/src",
    "transfer-helper/tests",
    # Stakeable token
    "stakeable-token/bin",
    "stakeable-token/session-code",
    "stakeable-token/src",
    "stakeable-token/tests",
    # Stable usd equivalent
    "stable-usd-equivalent/bin",
    "stable-usd-equivalent/session-code",
    "stable-usd-equivalent/src",
    "stable-usd-equivalent/tests",
    # Liquidity-guard
    "liquidity-guard/bin",
    "liquidity-guard/session-code",
    "liquidity-guard/src",
    "liquidity-guard/tests",
]

[profile.release]
codegen-units = 1
lto = true