[package]
name = "declaration_crate"
version = "0.1.0"
authors = ["Muzahir Hussain <muzahir.hussain@scytalelabs.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.3.2"
casper-types = "1.3.2"
contract-utils = { path = "../utils/contract-utils" }
stakeable-token-utils = { path = "../utils/stakeable-token-utils" }
casper_types_derive = "0.1.0"
hex = { version = "0.4.3", default-features = false }
renvm-sig = "0.1.1"
globals_crate = { path = "../globals_crate" }
