[package]
name = "globals_crate"
version = "0.1.0"
authors = ["Muzahir Hussain <muzahir.hussain@scytalelabs.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.3.2"
casper-types = "1.3.2"
hex = { version = "0.4.3", default-features = false }
contract-utils = { path = "../utils/contract-utils" }
wise-token-utils = { path = "../utils/wise-token-utils" }
erc20_crate = { path = "../erc20_crate" }
