[package]
name = "helper_crate"
version = "0.1.0"
authors = ["Muzahir Hussain <muzahir.hussain@scytalelabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.3.2"
casper-types = "1.3.2"
contract-utils = { path = "../utils/contract-utils" }
renvm-sig = "0.1.1"
hex = "0.4.3"
casper_types_derive = "0.1.0"
wise-token-utils = { path = "../utils/wise-token-utils" }
globals_crate = { path = "../globals_crate" }
declaration_crate = { path = "../declaration_crate" }
timing_crate = { path = "../timing_crate" }

[features]
default = [
    "casper-contract/std",
    "casper-types/std",
    "casper-contract/test-support",
]
