[package]
name = "liquidity_token_crate"
version = "0.1.0"
authors = ["Muhammad Talha Dar<muhammadtalhadar@scytalelabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.3.2"
casper-types = "1.3.2"
contract-utils = { path = "../utils/contract-utils" }
renvm-sig = "0.1.1"
hex = "0.4.3"
casper_types_derive = "0.1.0"
wise-token-utils = { path = "../utils/wise-token-utils" }
globals_crate = { path = "../globals_crate" }
declaration_crate = { path = "../declaration_crate" }
timing_crate = { path = "../timing_crate" }
helper_crate = { path = "../helper_crate" }
snapshot_crate = { path = "../snapshot_crate" }
referral_token_crate = { path = "../referral_token_crate" }
staking_token_crate = { path = "../staking_token_crate" }
bep20_crate = { path = "../bep20_crate" }

[features]
default = [
    "casper-contract/std",
    "casper-types/std",
    "casper-contract/test-support",
]
