[package]
name = "snapshot_crate"
version = "0.1.0"
authors = ["Muzahir Hussain <muzahir.hussain@scytalelabs.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.3.2"
casper-types = "1.3.2"
contract-utils = { path = "../utils/contract-utils" }
casper_types_derive = "0.1.0"
wise-token-utils = { path = "../utils/wise-token-utils" }
globals_crate = { path = "../globals_crate" }
declaration_crate = { path = "../declaration_crate" }
timing_crate = { path = "../timing_crate" }
helper_crate = { path = "../helper_crate" }
bep20_crate = { path = "../bep20_crate" }
