[package]
name = "snapshot_crate"
version = "0.1.0"
authors = ["Muzahir Hussain <muzahir.hussain@scytalelabs.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.3.2"
casper-types = "1.3.2"
contract-utils = { path = "../utils/contract-utils" }
casper_types_derive = "0.1.0"
stakeable-token-utils = { path = "../utils/stakeable-token-utils" }
globals_crate = { path = "../globals_crate" }
declaration_crate = { path = "../declaration_crate" }
timing_crate = { path = "../timing_crate" }
helper_crate = { path = "../helper_crate" }
erc20_crate = { path = "../erc20_crate" }
