[package]
name = "timing_crate"
version = "0.1.0"
authors = ["Muzahir Hussain <muzahir.hussain@scytalelabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.3.2"
casper-types = "1.3.2"
contract-utils = { path = "../utils/contract-utils" }
stakeable-token-utils = { path = "../utils/stakeable-token-utils" }
globals_crate = { path = "../globals_crate" }
declaration_crate = { path = "../declaration_crate" }
erc20_crate = { path = "../erc20_crate" }

[features]
default = [
    "casper-contract/std",
    "casper-types/std",
    "casper-contract/test-support",
]
