[package]
authors = ["Bassam Munib <bassam.munib@scytalelabs.com>"]
edition = "2018"
name = "bep20"
version = "0.1.0"

[dependencies]
casper-contract = "1.3.2"
casper-types = "1.3.2"
contract-utils = { path = "../../utils/contract-utils" }
wise-token-utils = { path = "../../utils/wise-token-utils" }
cryptoxide = "0.3.3"
hex = { version = "0.4.3", default-features = false }
renvm-sig = "0.1.1"

[[bin]]
bench = false
doctest = false
name = "bep20-token"
path = "bin/bep20_token.rs"
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]
