[package]
name = "tests-common"
version = "0.2.0"
authors = ["Bassam Monib <bassam.munib@scytalelabs.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
casperlabs-contract-utils = "0.1.4"
casper-engine-test-support = "2.1.0"
casperlabs-test-env = "0.2.0"
hex = "0.4.3"
common = { path = "../common" }
global = { path = "../../crates/global" }
