[package]
edition = "2018"
name = "staking-token"
authors = [
    "Muhammad Adrees <muhammad.adrees@scytalelabs.com>",
    "Muzahir Hussain <muzahir.hussain@scytalelabs.com>",
    "Muhammad Talha Dar <muhammadtalhadar@scytalelabs.com>",
]
version = "0.1.0"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
casper_types_derive = "0.1.0"
casperlabs-contract-utils = "0.1.4"
common = { path = "../../common" }
referral-token = { path = "../referral-token" }

