[package]
name = "session-code-stable-usd-equivalent"
version = "0.2.0"
authors = ["Bassam Monib <bassam.munib@scytalelabs.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
casperlabs-contract-utils = "0.1.4"
common = { path = "../../common" }

[[bin]]
name = "session-code-stable-usd-equivalent"
path = "bin/main.rs"
bench = false
doctest = false
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]