[package]
name = "stable_usd_tests"
version = "0.1.0"
authors = ["Muhammad Talha Dar <muhammadtalhadar@scytalelabs.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.3.2"
casper-types = "1.3.2"
casper-engine-test-support = "=1.3.2"
test-env = { path = "../../utils/test-env" }
contract-utils = { path = "../../utils/contract-utils" }
wise-token-utils = { path = "../../utils/wise-token-utils"}
hex = "0.4.3"
blake2 = "0.9.1"
more-asserts = "0.2.1"
renvm-sig = "0.1.1"
cryptoxide = "0.3.3"

[features]
default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]
