[package]
name = "stable_usd_equivalent"
version = "0.1.0"
authors = ["Muhammad Talha Dar <muhammadtalhadar@scytalelabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.3.2"
casper-types = "1.3.2"
contract-utils = { path = "../../utils/contract-utils" }
stakeable-token-utils = { path = "../../utils/stakeable-token-utils" }
renvm-sig = "0.1.1"
hex = "0.4.3"

[[bin]]
name = "stable_usd_equivalent"
path = "bin/stable_usd_equivalent_bin.rs"
bench = false
doctest = false
test = false

[features]
default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]
