[package]
name = "stakeable-token-crate"
version = "0.2.0"
authors = ["Bassam Monib <bassam.munib@scytalelabs.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
casperlabs-contract-utils = "0.1.4"
liquidity-token = { path = "../../crates/liquidity-token" }
common = { path = "../../common/common" }