[package]
name = "stakeable-token-tests"
version = "0.1.0"
authors = ["Bassam Monib <bassam.munib@scytalelabs.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
casper-engine-test-support = "2.1.0"
casperlabs-test-env = "0.2.0"
casperlabs-contract-utils = "0.1.4"
tests-common = { path = "../../common/tests-common" }

[features]
default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]