[package]
name = "stakeable_token"
version = "0.1.0"
authors = ["Muzahir Hussain <muzahir.hussain@scytalelabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.3.2"
casper-types = "1.3.2"
contract-utils = { path = "../../utils/contract-utils" }
casper_types_derive = "0.1.0"
declaration_crate = { path = "../../declaration_crate" }
staking_token_crate = { path = "../../staking_token_crate" }
globals_crate = { path = "../../globals_crate" }
timing_crate = { path = "../../timing_crate" }
helper_crate = { path = "../../helper_crate" }
liquidity_token_crate = { path = "../../liquidity_token_crate" }
referral_token_crate = { path = "../../referral_token_crate" }
snapshot_crate = { path = "../../snapshot_crate" }
erc20_crate = { path = "../../erc20_crate" }
stakeable-token-utils = { path = "../../utils/stakeable-token-utils" }

[[bin]]
name = "stakeable_token"
path = "bin/stakeable_token_bin.rs"
bench = false
doctest = false
test = false

[features]
default = [
    "casper-contract/std",
    "casper-types/std",
    "casper-contract/test-support",
]
