[package]
authors = ["Bassam Munib <bassam.munib@scytalelabs.com>"]
edition = "2018"
name = "crate"
version = "0.1.0"

[dependencies]
casper-contract = "1.3.2"
casper-types = "1.3.2"
contract-utils = { path = "../../utils/contract-utils" }
wise-token-utils = { path = "../../utils/wise-token-utils" }
globals_crate = { path = "../../globals_crate" }
declaration_crate = { path = "../../declaration_crate" }
# stable_usd_equivalent = { path = "../../stable_usd_equivalent/stable_usd_equivalent" }
helper_crate = { path = "../../helper_crate" }
# liquidity_guard = { path = "../../liquidity_guard/liquidity_guard" }
liquidity_token_crate = { path = "../../liquidity_token_crate" }
referral_token_crate = { path = "../../referral_token_crate" }
snapshot_crate = { path = "../../snapshot_crate" }
staking_token_crate = { path = "../../staking_token_crate" }
timing_crate = { path = "../../timing_crate" }
erc20_crate = {path = "../../erc20_crate"}
# transfer_helper = { path = "../../transfer_helper/transfer_helper" }


[[bin]]
bench = false
doctest = false
name = "entry_points"
path = "bin/entry_points.rs"
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]
