[package]
name = "wisetoken_tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "=1.3.2"
casper-types = "=1.3.2"
casper-engine-test-support = "=1.3.2"
test-env = { path = "../../utils/test-env" }
hex = "0.4.3"
casper-execution-engine = "1.3.2"
once_cell = "1.8.0"
